fix: Correct personal data access regressions

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -57,7 +57,7 @@
           >Contact via Signal</a
         >
 
-        <a href="mailto:{{ .Site.Data.person.contact.mail }}" rel="noopener"
+        <a href="mailto:{{ .Site.Data.person.mail }}" rel="noopener"
           >Contact via Mail</a
         >
       </li>
