--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -2,7 +2,7 @@
   <div class="pf-c-card__body">
     <div class="lastcommit">
       <div>
-        <span>Last GitHub commit by</span>
+        <span>Latest GitHub commit by</span>
         <a class="lastcommit__user__url" target="_blank">
           <span class="lastcommit__user__name"></span>
           <sup class="lastcommit__user__followercount"></sup>
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<noscript>Please enable JavaScript to view the last GitHub commit.</noscript
+<noscript>Please enable JavaScript to view the latest GitHub commit.</noscript
 ><script type="module">
   const base = "{{ .BaseURL }}"
   const username = "{{ .Username }}";
