--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -5,8 +5,8 @@
         <span>Twitter feed for</span>
         <a target="_blank" class="twitterfeed__user__url">
           <span class="twitterfeed__user__name"></span>
-          <sup class="twitterfeed__user__followercount"></sup>
-        </a>
+          <sup class="twitterfeed__user__followercount"></sup> </a
+        >:
       </div>
 
       <ul class="twitterfeed__tweets"></ul>
