feat: Localize dates

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -15,7 +15,7 @@
 
             <h3>{{ .Title }}</h3>
             <p>{{ .Params.Excerpt }}</p>
-            <div>Published at {{ .Date }}</div>
+            <div>Published at {{ .Date | time.Format ":date_long" }}</div>
           </a>
         </li>
       {{ end }}
