--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -2,7 +2,7 @@
   <div class="pf-c-card__body">
     <div class="twitterfeed">
       <div>
-        <span>Twitter feed for</span>
+        <span>Latest tweets by</span>
         <a target="_blank" class="twitterfeed__user__url">
           <span class="twitterfeed__user__name"></span>
           <sup class="twitterfeed__user__followercount"></sup> </a
