feat: Add styled Twitter feed partial

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,3 +4,12 @@ $pf-global--font-path: "./{{ .Site.BaseURL }}/fonts";
 $fa-font-path: $pf-global--font-path + "/webfonts";
 
 @import "node_modules/@patternfly/patternfly/patternfly.scss";
+@import "node_modules/@patternfly/patternfly/patternfly-addons.scss";
+
+.pf-x-c-avatar-line {
+  height: 2.25rem;
+}
+
+.pf-x-m-no-decoration {
+  text-decoration: none !important;
+}
