--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -1,10 +1,18 @@
 <div class="pf-c-card" id="{{ .ID }}">
-  <div class="pf-c-card__title">
-    <span>Latest tweets by</span>
-    <a target="_blank" class="twitterfeed__user__url">
-      <span class="twitterfeed__user__name"></span>
-      <sup class="twitterfeed__user__followercount"></sup> </a
-    >:
+  <div
+    class="pf-c-card__title pf-l-flex pf-m-justify-content-space-between pf-m-align-items-center"
+  >
+    <span>Latest tweets</span>
+
+    <a
+      target="_blank"
+      class="twitterfeed__user__url pf-l-flex pf-m-align-items-center"
+    >
+      <img
+        src="https://img.shields.io/twitter/follow/{{ .Username }}?label={{ printf `%s%s` `@` .Username }}&style=social"
+        alt="Twitter follower count"
+      />
+    </a>
   </div>
   <div class="pf-c-card__body twitterfeed">
     <ul
@@ -25,13 +33,6 @@
   // User
   document.querySelector("#{{ .ID }} .twitterfeed__user__url").href =
     twitterFeed.userURL;
-
-  document.querySelector("#{{ .ID }} .twitterfeed__user__name").innerText =
-    twitterFeed.username;
-
-  document.querySelector(
-    "#{{ .ID }} .twitterfeed__user__followercount"
-  ).innerText = twitterFeed.userFollowerCount + " Followers";
 
   // Tweets
   twitterFeed.tweets.map((tweet) => {
