feat: Add card formatting for images

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,3 +13,7 @@ $fa-font-path: $pf-global--font-path + "/webfonts";
 .pf-x-m-no-decoration {
   text-decoration: none !important;
 }
+
+.pf-x-u-text-center {
+  text-align: center;
+}
