--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -89,7 +89,7 @@
 
     if (tweet.images.length > 0) {
       const images = document.createElement("div");
-      images.classList.add("pf-l-gallery", "pf-u-mt-sm")
+      images.classList.add("pf-l-gallery", "pf-m-gutter", "pf-u-mt-sm")
 
       tweet.images.forEach((image) => {
         const el = document.createElement("div");
